# staff

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
atlas/: Cargo.toml
atlas/src/: atlas.rs  indent.rs  lib.rs  pack.rs
cli/: Cargo.toml
color/: Cargo.toml
color/src/: color.rs  image.rs  lib.rs  palette.rs  tools.rs
convert/: Cargo.toml
convert/src/: action.rs  format.rs  lib.rs  mesh.rs  params.rs  parser.rs  skeleton.rs  target.rs
im/: Cargo.toml
im/src/: lib.rs
png/: Cargo.toml
png/src/: lib.rs
src/: format.rs  main.rs  mesh.rs  params.rs  parser.rs  skeleton.rs
staff/: Cargo.toml
staff/src/: main.rs
