[package]
name = "daem"
version = "0.1.0"
edition = "2021"
authors = ["nano <nanoqsh@gmail.com>"]
description = "The dae format converter"

[dependencies]
clap = { version = "4.1", default-features = false, features = ["derive", "help", "std"] }
glam = "0.23"
once_cell = "1.17.1"
quick-xml = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
