[package]
name = "daem"
version = "0.1.0"
edition = "2021"
authors = ["nano <nanoqsh@gmail.com>"]

[dependencies]
convert = { path = "convert" }
clap = { version = "4.1", default-features = false, features = ["derive", "help", "std"] }
serde_json = "1.0"

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
