[workspace]
resolver = "2"
members = ["atlas", "color", "convert", "staff"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }

[workspace.lints.clippy]
use_self = "deny"
unwrap_used = "deny"
missing_assert_message = "deny"

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
